--- a/racecar_web_interface/www/login.html
+++ b/racecar_web_interface/www/login.html
@@ -38,13 +38,12 @@
                   type="text"
                   class="form-control"
                   name="usager"
-                  required
                   placeholder="Entrez le nom usager de votre plateforme"
                 />
               </div>
               <div class="form-group">
                 <label for="MasterIP" class="h5"
-                  >Adresse IP de la plateforme</label
+                  >Adresse IP de la plateforme*</label
                 >
                 <input
                   type="text"
